# arxiv-research-digest

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  scheduler.py
.github/workflows/: ci.yml  docker.yml
agent/: __init__.py  loop.py  prompts.py  tools_def.py
config/: schedule.yaml  topics.yaml
migrations/: env.py
migrations/versions/: 001_initial_schema.py
scripts/: run_digest.py
src/arxiv_digest/: __init__.py  config.py  database.py  main.py
src/arxiv_digest/agent/: __init__.py  loop.py  prompts.py  tools_def.py
src/arxiv_digest/api/: __init__.py  deps.py
src/arxiv_digest/api/v1/: __init__.py  digests.py  health.py  papers.py  router.py  topics.py
src/arxiv_digest/models/: __init__.py  digest.py  paper.py  run_log.py  webhook.py
src/arxiv_digest/scheduler/: __init__.py  jobs.py
src/arxiv_digest/schemas/: __init__.py  common.py  digest.py  paper.py  run_log.py  topic.py  webhook.py
src/arxiv_digest/services/: __init__.py  cache_service.py  digest_service.py  webhook_service.py
src/arxiv_digest/templates/: digest_executive.md.j2  digest_newsletter.md.j2  digest_technical.md.j2
src/arxiv_digest/tools/: __init__.py  arxiv.py  digest_gen.py  history.py  paper_details.py  scorer.py  semantic_scholar.py
src/arxiv_digest/ui/: __init__.py
src/arxiv_digest/ui/static/: app.js  style.css
src/arxiv_digest/ui/templates/: base.html  digest.html  index.html  papers.html
templates/: digest.md.j2
tests/: __init__.py  conftest.py  test_api_papers.py  test_cache_service.py  test_digests.py  test_health.py  test_papers.py  test_scorer.py  test_services_digest.py  test_tools_arxiv.py  test_topics.py  test_ui_routes.py  test_webhook_service.py
tools/: __init__.py  arxiv.py  comparator.py  digest.py  extractor.py
