[build-system]
requires = ["setuptools>=75.0.0", "wheel>=0.45.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arxiv-research-digest"
version = "1.0.0"
description = "Agentic ArXiv research monitor powered by Claude"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "ArXiv Research Digest Team"},
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 99
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", "F", "I", "N", "W", "UP", "ANN", "S", "B", "A", "COM", "C4",
    "DTZ", "ISC", "PIE", "PT", "RSE", "RET", "SIM", "TID", "TCH", "ARG",
    "PLC", "PLE", "PLR", "PLW", "TRY", "FLY", "PERF", "RUF",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S108", "ARG001", "ARG002", "PLR2004", "ANN401", "PLR0913", "PLC0415", "TC003"]
"src/arxiv_digest/api/**/*.py" = ["B008", "PLR0913"]
"src/arxiv_digest/main.py" = ["B008", "PLR0913"]
"src/arxiv_digest/services/digest_service.py" = ["A002", "DTZ011", "TRY300", "TRY400"]

[tool.ruff.lint.isort]
known-first-party = ["arxiv_digest"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--strict-markers --tb=short -q"
markers = [
    "slow: marks tests as slow running",
    "integration: marks tests requiring external services",
]
